--- a/docs/partner_editable/service_limits.adoc
+++ b/docs/partner_editable/service_limits.adoc
@@ -3,12 +3,14 @@
 |Resource |This deployment uses
 
 // Space needed to maintain table headers
-|VPCs |<n>
-|Elastic IP addresses |<n>
-|AWS Identity and Access Management (IAM) security groups |<n>
-|IAM roles |<n>
-|Auto Scaling groups |<n>
-|Application Load Balancers |<n>
-|Network Load Balancers |<n>
-|<type> instances |<n>
+|VPCs |1
+|Elastic IP addresses |2
+|Auto Scaling groups |1
+|Application Load Balancers |1
+|t3.medium instances |1
+|m5.xlarge instances |4
+|EFS file systems |1
+|EFS mount targets |2
+|AWS Key Management Service (KMS) encryption keys |1
+|Secure Sockets Layer (SSL) certificates |1
 |===
