Updating image URLs

--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -7,7 +7,7 @@ AWS Cloud.
 .Quick Start architecture for _{partner-product-name}_ on AWS
 Deploying this Quick Start for a new virtual private cloud (VPC) with *default parameters* builds the following Dell Boomi environment in the AWS Cloud.
 
-image:./images/image2.png[image,width=648,height=430]
+image:./image2.png[image,width=648,height=430]
 
 *Figure 1: Quick Start architecture for Dell Boomi on AWS*
 
