--- a/docs/partner_editable/additional_info.adoc
+++ b/docs/partner_editable/additional_info.adoc
@@ -4,7 +4,7 @@
 == Test the deployment
 To view the Molecule in the Dell Boomi AtomSphere platform, log in to your Dell Boomi https://platform.boomi.com/[_account_], navigate to the *Manage* drop-down menu, and choose *Atom Management*. The newly created Amazon EC2 instance Molecule cluster will be displayed.
 
-image:./images/image3.png[image,width=648,height=293]
+image:./image3.png[image,width=648,height=293]
 
 *Figure 2: Dell Boomi Dashboard with an unattached AWS-managed Molecule cluster*
 
@@ -37,9 +37,9 @@ You can create an installation token without having to share your login credenti
 
 Go to Integration → Build → Create → Atom Runtime → Molecule
 
-image:./images/image5.png[image,width=462,height=187]Next expand ‘Security Options’.
+image:./image5.png[image,width=462,height=187]Next expand ‘Security Options’.
 
-image:./images/image6.png[image,width=402,height=319]
+image:./image6.png[image,width=402,height=319]
 
 Now you can generate the installation token. You can specify up to 24 hours duration for the token before it expires.
 
@@ -49,10 +49,10 @@ You can create an long-lived API token without having to share your login creden
 
 Click on Integration → My User Settings → AtomSphere API Tokens and select ‘Add New Token’.
 
-image:./images/image7.png[image,width=576,height=135]
+image:./image7.png[image,width=576,height=135]
 
-image:./images/image9.png[image,width=370,height=219]
+image:./image9.png[image,width=370,height=219]
 
 Provide a unique name for the token then click ‘Generate Token’.
 
-=== image:./images/image10.png[image,width=314,height=183]Copy your token key value to a safe place. If you lose it, you will have to generate a new token and revoke the old one.
+=== image:./image10.png[image,width=314,height=183]Copy your token key value to a safe place. If you lose it, you will have to generate a new token and revoke the old one.
