--- a/docs/partner_editable/additional_info.adoc
+++ b/docs/partner_editable/additional_info.adoc
@@ -55,4 +55,6 @@ image:./image9.png[image,width=370,height=219]
 
 Provide a unique name for the token then click ‘Generate Token’.
 
-=== image:./image10.png[image,width=314,height=183]Copy your token key value to a safe place. If you lose it, you will have to generate a new token and revoke the old one.
+image:./image10.png[image,width=314,height=183]
+
+Copy your token key value to a safe place. If you lose it, you will have to generate a new token and revoke the old one.
