--- a/docs/partner_editable/additional_info.adoc
+++ b/docs/partner_editable/additional_info.adoc
@@ -33,27 +33,30 @@ Amazon EFS reports metrics to CloudWatch and can be monitored there. Metrics inc
 
 === Creating an Installation Token
 
-You can create an installation token without having to share your login credentials for an Atom/Molecule installation. If you are an administrator, follow the steps below to create an installation token:
+Administrators can create an installation token without having to share login credentials for an Atom/Molecule installation. To create an installation token, do the following:
 
-Go to Integration → Build → Create → Atom Runtime → Molecule
+Choose *Integration > Build > Create > Atom Runtime > Molecule*.
 
 image:./image5.png[image,width=462,height=187]Next expand ‘Security Options’.
 
 image:./image6.png[image,width=402,height=319]
 
-Now you can generate the installation token. You can specify up to 24 hours duration for the token before it expires.
+Now you can generate the installation token. You can specify a duration of up to 24 hours before it expires.
 
 === Creating an API Token
 
-You can create an long-lived API token without having to share your login credentials for an Atom/Molecule installation. If you are an administrator, follow the steps below to create an user API token:
+Administrators can create a long-lived API token without having to share login credentials for an Atom/Molecule installation. To create an user API token, do the following:
 
-Click on Integration → My User Settings → AtomSphere API Tokens and select ‘Add New Token’.
+. Choose *Integration > My User Settings > AtomSphere API Tokens*.
+. Choose *Add New Token*.
 
 image:./image7.png[image,width=576,height=135]
 
 image:./image9.png[image,width=370,height=219]
 
-Provide a unique name for the token then click ‘Generate Token’.
+[start=3]
+. Enter a unique name for the token.
+. Click *Generate Token*.
 
 image:./image10.png[image,width=314,height=183]
 
