--- a/docs/partner_editable/additional_info.adoc
+++ b/docs/partner_editable/additional_info.adoc
@@ -35,9 +35,11 @@ Amazon EFS reports metrics to CloudWatch and can be monitored there. Metrics inc
 
 Administrators can create an installation token without having to share login credentials for an Atom/Molecule installation. To create an installation token, do the following:
 
-Choose *Integration > Build > Create > Atom Runtime > Molecule*.
-
-image:./image5.png[image,width=462,height=187]Next expand ‘Security Options’.
+. Go to *Manage > Atom Management*.
+. Choose *+New > Molecule*.
+. On the *Build* page, choose the *Welcome* tab.
+. Under the *Create* heading, choose *Molecule*.
+. Choose *Security Options*.
 
 image:./image6.png[image,width=402,height=319]
 
@@ -47,17 +49,19 @@ Now you can generate the installation token. You can specify a duration of up to
 
 Administrators can create a long-lived API token without having to share login credentials for an Atom/Molecule installation. To create an user API token, do the following:
 
-. Choose *Integration > My User Settings > AtomSphere API Tokens*.
+. Choose *Settings > Account Information and Setup*.
+. Choose the *AtomSphere API Tokens* tab.
 . Choose *Add New Token*.
-
-image:./image7.png[image,width=576,height=135]
-
-image:./image9.png[image,width=370,height=219]
 
 [start=3]
 . Enter a unique name for the token.
+
+image:./image9.png[image,width=370,height=219]
+
+[start=4]
 . Click *Generate Token*.
+. Choose *Copy* to copy the token string to the clipboard without exiting. When you are ready to exit, click *Copy to Clipboard & Close* to copy the token string and exit the dialog. 
 
 image:./image10.png[image,width=314,height=183]
 
-Copy your token key value to a safe place. If you lose it, you will have to generate a new token and revoke the old one.
+Copy the token key value in a secure location. It is recommended that you treat tokens with the same level of security as you would a password. If you lose it, you will have to generate a new token and revoke the old one.
