--- a/docs/partner_editable/additional_info.adoc
+++ b/docs/partner_editable/additional_info.adoc
@@ -2,11 +2,13 @@
 //Should any sections not be applicable, remove them
 
 == Test the deployment
-To view the Molecule in the Dell Boomi AtomSphere platform, log in to your Dell Boomi https://platform.boomi.com/[_account_], navigate to the *Manage* drop-down menu, and choose *Atom Management*. The newly created Amazon EC2 instance Molecule cluster will be displayed.
+To view the Molecule in the Dell Boomi AtomSphere platform, log in to your https://platform.boomi.com/[Dell Boomi account], navigate to the *Manage* drop-down menu, and choose *Atom Management*. The newly created Amazon EC2 instance Molecule cluster will be displayed.
 
+:xrefstyle: short
+[#image3]
+.Dell Boomi Dashboard with an unattached AWS-managed Molecule Cluster
+[link=images/image3.png]
 image:./image3.png[image,width=648,height=293]
-
-*Figure 2: Dell Boomi Dashboard with an unattached AWS-managed Molecule cluster*
 
 You can then attach the Molecules to any environment you have staged and deploy workloads to that Molecule cluster. By Default the molecule you deployed will be under ‘Unattached Atoms’. When you click on ‘Atom Information’ you will see an option to attach it to an environment.
 
@@ -40,10 +42,10 @@ Administrators can create an installation token without having to share login cr
 . On the *Build* page, choose the *Welcome* tab.
 . Under the *Create* heading, choose *Molecule*.
 . Choose *Security Options*.
+. In the *Token Valid for* field, select the length of time the token is valid (30 minutes to 24 hours).
+. Click *Generate Token*.
 
 image:./image6.png[image,width=402,height=319]
-
-Now you can generate the installation token. You can specify a duration of up to 24 hours before it expires.
 
 === Creating an API Token
 
@@ -64,4 +66,4 @@ image:./image9.png[image,width=370,height=219]
 
 image:./image10.png[image,width=314,height=183]
 
-Copy the token key value in a secure location. It is recommended that you treat tokens with the same level of security as you would a password. If you lose it, you will have to generate a new token and revoke the old one.
+Copy the token key value to a secure location. It is recommended that you treat tokens with the same level of security as you would a password. If you lose it, you will have to generate a new token and revoke the old one.
