--- a/docs/partner_editable/pre-reqs.adoc
+++ b/docs/partner_editable/pre-reqs.adoc
@@ -2,5 +2,5 @@
 
 ==== Prepare your {partner-company-name} account
 
-Ensure your Dell Boomi account has at least one available Enterprise Molecule license.
+Ensure your  Boomi account has at least one available Enterprise Molecule license.
 Ensure you have a valid Account ID, Installation Token, API Key, or Username/Password.
