--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -2,28 +2,22 @@ Deploying this Quick Start for a new virtual private cloud (VPC) with
 default parameters builds the following {partner-product-name} environment in the
 AWS Cloud.
 
-// Replace this example diagram with your own. Send us your source PowerPoint file. Be sure to follow our guidelines here : http://(we should include these points on our contributors guide)
-
-Deploying this Quick Start for a new virtual private cloud (VPC) with default parameters builds the following Boomi environment in the AWS Cloud.
-
 [#architecture1]
 .Quick Start architecture for _{partner-product-name}_ on AWS
-[link=images/image2.png]
-image::../images/image2.png[image,width=648,height=430]
+[link=images/boomi-molecule-architecture-diagram.png]
+image::../images/boomi-molecule-architecture-diagram.png[image,width=648,height=430]
 
 The Quick Start sets up the following:
 
 * A highly available architecture that spans two Availability Zones.*
-* A VPC configured with public and private subnets according to AWS best practices, to provide you with your own virtual network on AWS.*
-* An Application Load Balancer.
+* A virtual private cloud (VPC) configured with public and private subnets according to AWS best practices, to provide you with your own virtual network on AWS.*
 * In the public subnets:
-
-** Managed NAT gateways to allow outbound internet access for resources in the private subnets.*
-** A Linux bastion host in an Auto Scaling group to allow inbound Secure Shell (SSH) access to Amazon Elastic Compute Cloud (Amazon EC2) instances in public and private subnets, with Amazon CloudWatch for monitoring.
-
+** Managed network address translation (NAT) gateways to allow outbound internet access for resources in the private subnets.*
+** A Linux bastion host in an Auto Scaling group to allow inbound Secure Shell (SSH) access to Amazon Elastic Compute Cloud (Amazon EC2) instances in public and private subnets, with Amazon CloudWatch for monitoring.*
+* An Application Load Balancer to route traffic to the Boomi Molecule instances in the private subnets.
 * In the private subnets:
-
-** Four Amazon EC2 instances with the Boomi Molecule software installed, two in each Availability Zone.
-** Amazon Elastic File System (Amazon EFS) deployed in the Region. Two Amazon EFS mount points are created also, one in each Availability Zone.
+** Boomi Molecule deployed to four Amazon EC2 instances.
+** Amazon Elastic File System (Amazon EFS) mount points.
+* An Amazon CloudWatch alarm to monitor EC2 instances and initiate recovery actions if an instance fails.
 
 *The template that deploys the Quick Start into an existing VPC skips the components marked by asterisks and prompts you for your existing VPC configuration.
