--- a/docs/deployment_guide/partner_editable/post_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/post_deployment.adoc
@@ -1,13 +1,17 @@
+// Include any postdeployment steps here, such as steps necessary to test that the deployment was successful. If there are no postdeployment steps, leave this file empty.
+
+== Postdeployment steps
+
 // Add steps as necessary for accessing the software, post-configuration, and testing. Don’t include full usage instructions for your software, but add links to your product documentation for that information.
 //Should any sections not be applicable, remove them
 
-== Test the deployment
+=== Test the deployment
 To view the Molecule on Boomi AtomSphere, log in to your https://platform.boomi.com/[Boomi account^]. On the *Manage*, choose *Atom Management*. The newly created Amazon EC2 instance Molecule cluster is displayed.
 
 [#AddInfo1]
 Boomi dashboard with an unattached AWS-managed Molecule cluster
 [link=images/image3.png]
-image::../images/image3.png[image,width=648,height=293]
+image::../docs/deployment_guide/images/image3.png[image,width=648,height=293]
 
 You can attach Molecules to any environment you have staged and deploy workloads to that Molecule cluster. On the Boomi dashboard, your deployed Molecule is under *Unattached Atoms*. For more information, refer to https://help.boomi.com/bundle/integration/page/t-atm-Attaching_an_Atom_to_an_Enviro.html[Attaching an Atom to or detaching an Atom from an environment^].
 
@@ -16,11 +20,8 @@ You can attach Molecules to any environment you have staged and deploy workloads
 
 //_Add any best practices for using the software._
 
-== Security
+=== Security
 This Quick Start deploys a bastion host and a Boomi Molecule cluster into an AWS VPC. The bastion host is the only means of accessing the Boomi Molecule cluster at a command-line level. The Boomi Molecule cluster is deployed into private subnets and cannot be reached through the internet. The Boomi Molecule cluster communicates through a NAT Gateway for updates and patches, and it communicates through the public-facing Application Load Balancer to communicate with the  Boomi AtomSphere platform.
-
-== Other useful information
-//Provide any other information of interest to users, especially focusing on areas where AWS or cloud usage differs from on-premises usage.
 
 === Performance monitoring
 
@@ -47,7 +48,7 @@ Administrators can create an installation token without having to share login cr
 [#AddInfo2]
 .Molecule Setup
 [link=images/image6.png]
-image::../images/image6.png[image,width=402,height=319]
+image::../docs/deployment_guide/images/image6.png[image,width=402,height=319]
 
 === Creating an API token
 
@@ -63,7 +64,7 @@ Administrators can create a long-lived API token without having to share login c
 [#AddInfo3]
 .New AtomSphere API Token
 [link=images/image9.png]
-image::../images/image9.png[image,width=370,height=219]
+image::../docs/deployment_guide/images/image9.png[image,width=370,height=219]
 
 [start=4]
 . Choose *Generate Token*.
@@ -72,6 +73,6 @@ image::../images/image9.png[image,width=370,height=219]
 [#AddInfo4]
 .Copying the token string
 [link=images/image10.png]
-image::../images/image10.png[image,width=370,height=219]
+image::../docs/deployment_guide/images/image10.png[image,width=370,height=219]
 
 Copy the token key value to a secure location. It is recommended that you treat tokens with the same level of security as you would a password. If you lose it, you will have to generate a new token and revoke the old one.
